cmake_minimum_required(VERSION 3.10)

# Process install directory
if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  message(FATAL_ERROR "Please set CMAKE_INSTALL_PREFIX variable")
else(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(INSTALL_DIR "${CMAKE_INSTALL_PREFIX}")
  file(MAKE_DIRECTORY ${INSTALL_DIR})
endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

add_subdirectory(src)

